--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,9 @@
     <feature.usc.version>1.0-SNAPSHOT</feature.usc.version>
     <feature.vtn-manager.version>0.3.0-SNAPSHOT</feature.vtn-manager.version>
     <feature.bgpcep.version>0.4.0-SNAPSHOT</feature.bgpcep.version>
+<!--
     <feature.packetcable.version>1.2.0-SNAPSHOT</feature.packetcable.version>
+-->
     <feature.plugin2oc.version>0.2.0-SNAPSHOT</feature.plugin2oc.version>
     <feature.tcpmd5.version>1.1.0-SNAPSHOT</feature.tcpmd5.version>
     <feature.topoprocessing.version>0.0.1-SNAPSHOT</feature.topoprocessing.version>
@@ -260,7 +262,7 @@
           <type>xml</type>
         </dependency>
 
-        <!-- packetcable Related Features -->
+        <!-- packetcable Related Features
         <dependency>
            <groupId>org.opendaylight.packetcable</groupId>
            <artifactId>features-packetcable</artifactId>
@@ -268,6 +270,7 @@
            <classifier>features</classifier>
           <type>xml</type>
         </dependency>
+         -->
       </dependencies>
   </dependencyManagement>
   <build>
