Adding capwap features
1) Feature Tests Pass: https://jenkins.opendaylight.org/releng/job/capwap-merge-master/4/
2) Features Comply with Guidelines: https://git.opendaylight.org/gerrit/gitweb?p=capwap.git;a=blob;f=features/src/main/features/features.xml;h=7a747ce3bd157bde730c475e5f91c010d6aaf877;hb=HEAD
	a) Feature Names: Prefixed with 'odl-' : odl-capwap-ac-rest
	b) Features Descriptions: Present
	c) Features Start-Levels: No start-levels on <bundle> elements or <feature> elements
3) Features Tested: Features have been tested for functionality with
	a) feature:install odl-capwap-ac-rest
	b) feature:install odl-integration-compatible-with-all
4) Integration Test Impact - none

Change-Id: I7bd315f3bcaf9fbb21003cf978089b803b356b16
Signed-off-by: Navin Agrawal <anavin@gmail.com>

--- a/features/index/pom.xml
+++ b/features/index/pom.xml
@@ -273,6 +273,14 @@
     </dependency>
 
     <dependency>
+      <groupId>org.opendaylight.capwap</groupId>
+      <artifactId>capwap-features</artifactId>
+      <version>${feature.capwap.version}</version>
+      <classifier>features</classifier>
+      <type>xml</type>
+    </dependency>
+
+    <dependency>
       <groupId>org.opendaylight.snmp</groupId>
       <artifactId>features-snmp</artifactId>
       <version>${snmp.plugin.version}</version>
