Added iotdm feature to integration
1) Feature Tests Pass: https://jenkins.opendaylight.org/releng/view/iotdm/job/iotdm-merge-master/org.opendaylight.iotdm$onem2m-features/9/testReport/
2) Features Comply with Guidelines: https://git.opendaylight.org/gerrit/gitweb?p=iotdm.git;a=blob;f=onem2m/onem2m-features/src/main/features/features.xml;h=4d98920ad269afcdeb3d102a43b394d265508d36;hb=master
  a) Feature Names (prefixed with 'odl-'): odl-iotdm-onem2m (check https://wiki.opendaylight.org/view/Runtime:Karaf_Features_Guidelines#Feature_Naming)
  b) Features Descriptions: Present (check https://wiki.opendaylight.org/view/Runtime:Karaf_Features_Guidelines#Description)
  c) Features Start-Levels: None
3) Features Tested: Features have been tested for functionality with
  a) feature:install odl-iotdm-onem2m
  b) feature:install odl-iotdm-onem2m, odl-integration-compatible-with-all
4) Integration Test Impact: None

Change-Id: I6b13350b262a7c9387d05a93548af9cb51a94052
Signed-off-by: John Burns <johnburn@cisco.com>

--- a/features/index/pom.xml
+++ b/features/index/pom.xml
@@ -129,6 +129,13 @@
       <type>xml</type>
     </dependency>
     <dependency>
+      <groupId>org.opendaylight.iotdm</groupId>
+      <artifactId>onem2m-features</artifactId>
+      <version>${feature.iotdm.version}</version>
+      <classifier>features</classifier>
+      <type>xml</type>
+    </dependency>
+    <dependency>
       <groupId>org.opendaylight.l2switch</groupId>
       <artifactId>features-l2switch</artifactId>
       <version>0.2.0-SNAPSHOT</version>
