--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
     <enforcer.version>1.3.1</enforcer.version>
     <snmp.plugin.version>1.0-SNAPSHOT</snmp.plugin.version>
     <didm.version>0.1.0-SNAPSHOT</didm.version>
+    <feature.iotdm.version>0.0.1-SNAPSHOT</feature.iotdm.version>
     <feature.vpnservice.version>1.0-SNAPSHOT</feature.vpnservice.version>
     <feature.lacp.version>1.0.0-SNAPSHOT</feature.lacp.version>
   </properties>
