--- a/pom.xml
+++ b/pom.xml
@@ -20,40 +20,42 @@
     <tag>HEAD</tag>
   </scm>
   <properties>
-    <nexusproxy>http://nexus.opendaylight.org/content</nexusproxy>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <feature.dlux.version>0.2.0-SNAPSHOT</feature.dlux.version>
-    <feature.mdsal.version>1.2.0-SNAPSHOT</feature.mdsal.version>
-    <feature.flow.version>1.2.0-SNAPSHOT</feature.flow.version>
-    <feature.yangtools.version>0.7.0-SNAPSHOT</feature.yangtools.version>
+    <!-- Keep this list sorted alphabetically please -->
+    <checkstyle.version>2.13</checkstyle.version>
+    <didm.version>0.1.0-SNAPSHOT</didm.version>
+    <enforcer.version>1.3.1</enforcer.version>
     <feature.adsal.version>0.9.0-SNAPSHOT</feature.adsal.version>
-    <feature.neutron.version>0.5.0-SNAPSHOT</feature.neutron.version>
-    <feature.nsf.version>0.5.0-SNAPSHOT</feature.nsf.version>
-    <feature.openflowplugin.version>0.1.0-SNAPSHOT</feature.openflowplugin.version>
-    <feature.ovsdb.version>1.1.0-SNAPSHOT</feature.ovsdb.version>
-    <feature.ovsdb.openstack.version>1.1.0-SNAPSHOT</feature.ovsdb.openstack.version>
-    <feature.groupbasedpolicy.version>0.2.0-SNAPSHOT</feature.groupbasedpolicy.version>
-    <feature.lispflowmapping.version>1.2.0-SNAPSHOT</feature.lispflowmapping.version>
-    <feature.sfc.version>0.1.0-SNAPSHOT</feature.sfc.version>
-    <feature.snbi.version>1.1.0-SNAPSHOT</feature.snbi.version>
-    <feature.ttp.version>0.1.0-SNAPSHOT</feature.ttp.version>
-    <feature.usc.version>1.0-SNAPSHOT</feature.usc.version>
-    <feature.capwap.version>0.1.0-SNAPSHOT</feature.capwap.version>
-    <feature.vtn-manager.version>0.3.0-SNAPSHOT</feature.vtn-manager.version>
     <feature.bgpcep.version>0.4.0-SNAPSHOT</feature.bgpcep.version>
+    <feature.capwap.version>0.1.0-SNAPSHOT</feature.capwap.version>
+    <feature.dlux.version>0.2.0-SNAPSHOT</feature.dlux.version>
+    <feature.flow.version>1.2.0-SNAPSHOT</feature.flow.version>
+    <feature.groupbasedpolicy.version>0.2.0-SNAPSHOT</feature.groupbasedpolicy.version>
+    <feature.iotdm.version>0.0.1-SNAPSHOT</feature.iotdm.version>
+    <feature.lacp.version>1.0.0-SNAPSHOT</feature.lacp.version>
+    <feature.lispflowmapping.version>1.2.0-SNAPSHOT</feature.lispflowmapping.version>
+    <feature.mdsal.version>1.2.0-SNAPSHOT</feature.mdsal.version>
+    <feature.nsf.version>0.5.0-SNAPSHOT</feature.nsf.version>
+    <feature.neutron.version>0.5.0-SNAPSHOT</feature.neutron.version>
+    <feature.openflowplugin.version>0.1.0-SNAPSHOT</feature.openflowplugin.version>
+    <feature.ovsdb.openstack.version>1.1.0-SNAPSHOT</feature.ovsdb.openstack.version>
+    <feature.ovsdb.version>1.1.0-SNAPSHOT</feature.ovsdb.version>
     <feature.packetcable.version>1.2.0-SNAPSHOT</feature.packetcable.version>
     <feature.plugin2oc.version>0.2.0-SNAPSHOT</feature.plugin2oc.version>
+    <feature.sfc.version>0.1.0-SNAPSHOT</feature.sfc.version>
+    <feature.snbi.version>1.1.0-SNAPSHOT</feature.snbi.version>
     <feature.tcpmd5.version>1.1.0-SNAPSHOT</feature.tcpmd5.version>
     <feature.topoprocessing.version>0.0.1-SNAPSHOT</feature.topoprocessing.version>
+    <feature.ttp.version>0.1.0-SNAPSHOT</feature.ttp.version>
+    <feature.usc.version>1.0-SNAPSHOT</feature.usc.version>
+    <feature.vpnservice.version>1.0-SNAPSHOT</feature.vpnservice.version>
+    <feature.vtn-manager.version>0.3.0-SNAPSHOT</feature.vtn-manager.version>
+    <feature.yangtools.version>0.7.0-SNAPSHOT</feature.yangtools.version>
     <karaf.branding.version>1.1.0-SNAPSHOT</karaf.branding.version>
     <maven.surefire.version>2.16</maven.surefire.version>
-    <checkstyle.version>2.13</checkstyle.version>
-    <enforcer.version>1.3.1</enforcer.version>
+    <nexusproxy>http://nexus.opendaylight.org/content</nexusproxy>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <snmp.plugin.version>1.0-SNAPSHOT</snmp.plugin.version>
-    <didm.version>0.1.0-SNAPSHOT</didm.version>
-    <feature.iotdm.version>0.0.1-SNAPSHOT</feature.iotdm.version>
-    <feature.vpnservice.version>1.0-SNAPSHOT</feature.vpnservice.version>
-    <feature.lacp.version>1.0.0-SNAPSHOT</feature.lacp.version>
+    <!-- Keep this list sorted alphabetically please -->
   </properties>
   <modules>
     <module>distributions/</module>
