Adding TSDR features to integration project.
1) Feature Tests Pass: https://jenkins.opendaylight.org/releng/job/tsdr-merge-master/org.opendaylight.tsdr$features-tsdr/19/testReport/
2) Features Comply with Guidelines: https://git.opendaylight.org/gerrit/gitweb?p=tsdr.git;a=blob;f=features/src/main/resources/features.xml;h=62febc1a6f0c10375d9ca61a913a787cc6491b7d;hb=6e434b6790b86ecf9ca685118a7f24ed33a42deb
   a) Feature Names (prefixed with 'odl-'): odl-tsdr-all, odl-tsdr-hbase (check https://wiki.opendaylight.org/view/Runtime:Karaf_Features_Guidelines#Feature_Naming)
   b) Features Descriptions: Present ( check https://wiki.opendaylight.org/view/Runtime:Karaf_Features_Guidelines#Description)
   c) Features Start-Levels: None
3) Features Tested: Features have been tested for functionality with
   a) feature:install odl-tsdr-all
   b) feature:install odl-tsdr-hbase
4) Integration Test Impact: None
   
Change-Id: I001595aa219d9889345b4a3dffe76ce17251460a
Signed-off-by: YuLing Chen <yuling_c@dell.com>

--- a/features/index/pom.xml
+++ b/features/index/pom.xml
@@ -301,6 +301,13 @@
       <type>xml</type>
     </dependency>
     <dependency>
+      <groupId>org.opendaylight.tsdr</groupId>
+      <artifactId>features-tsdr</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <classifier>features</classifier>
+      <type>xml</type>
+    </dependency>
+    <dependency>
       <groupId>org.opendaylight.ttp</groupId>
       <artifactId>features-ttp</artifactId>
       <version>${feature.ttp.version}</version>
