--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
     <feature.snbi.version>1.1.0-SNAPSHOT</feature.snbi.version>
     <feature.tcpmd5.version>1.1.0-SNAPSHOT</feature.tcpmd5.version>
     <feature.topoprocessing.version>0.0.1-SNAPSHOT</feature.topoprocessing.version>
+    <feature.tsdr.version>1.0-SNAPSHOT</feature.tsdr.version>
     <feature.ttp.version>0.1.0-SNAPSHOT</feature.ttp.version>
     <feature.usc.version>1.0-SNAPSHOT</feature.usc.version>
     <feature.vpnservice.version>1.0-SNAPSHOT</feature.vpnservice.version>
