Adding SFC-OVS and SFC-netconf to Integration
Change-Id: I286f32eeee999cf0cb26a67c5205a64bf4ce236e
Signed-off-by: Reinaldo Penno <rapenno@gmail.com>

--- a/features/index/pom.xml
+++ b/features/index/pom.xml
@@ -191,13 +191,13 @@
       <classifier>features</classifier>
       <type>xml</type>
     </dependency>
-    <dependency>
-      <groupId>org.opendaylight.ovsdb</groupId>
-      <artifactId>features-ovs-sfc</artifactId>
-      <version>0.1.0-SNAPSHOT</version>
-      <classifier>features</classifier>
-      <type>xml</type>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>org.opendaylight.ovsdb</groupId>-->
+      <!--<artifactId>features-ovs-sfc</artifactId>-->
+      <!--<version>0.1.0-SNAPSHOT</version>-->
+      <!--<classifier>features</classifier>-->
+      <!--<type>xml</type>-->
+    <!--</dependency>-->
 <!--
     <dependency>
        <groupId>org.opendaylight.packetcable</groupId>
@@ -250,6 +250,20 @@
       <version>0.1.0-SNAPSHOT</version>
       <classifier>features</classifier>
       <type>xml</type>
+    </dependency>
+    <dependency>
+       <groupId>org.opendaylight.sfc</groupId>
+       <artifactId>features-sfc-ovs</artifactId>
+       <version>0.1.0-SNAPSHOT</version>
+       <classifier>features</classifier>
+       <type>xml</type>
+    </dependency>
+    <dependency>
+       <groupId>org.opendaylight.sfc</groupId>
+       <artifactId>features-sfc-netconf</artifactId>
+       <version>0.1.0-SNAPSHOT</version>
+       <classifier>features</classifier>
+       <type>xml</type>
     </dependency>
     <dependency>
       <groupId>org.opendaylight.snbi</groupId>
