Adding nic features
1) Feature Tests Pass: https://jenkins.opendaylight.org/releng/view/nic/job/nic-merge-master/20/
2) Features Comply with Guidelines: https://git.opendaylight.org/gerrit/gitweb?p=nic.git;a=blob;f=features/src/main/resources/features.xml;h=66ab48c12a5dc6965aac2a26c8719a6e9261366b;hb=HEAD
	a) Feature Names (prefixed with 'odl-'): odl-nic-core odl-nic-console
	b) Features Descriptions: Present (check https://wiki.opendaylight.org/view/Runtime:Karaf_Features_Guidelines#Description)
	c) Features Start-Levels: None
3) Features Tested: Features have been tested for functionality with
	a) feature:install odl-nic-core
	b) feature:install odl-nic-core odl-integration-compatible-with-all
4) Integration Test Impact: None

Change-Id: I68c251dfb62fcbf989ce1c0ea5f5f7c41ec8ad3c
Signed-off-by: Renato Aguiar <renato.aguiar@hp.com>

--- a/features/index/pom.xml
+++ b/features/index/pom.xml
@@ -164,6 +164,13 @@
       <type>xml</type>
     </dependency>
     <dependency>
+      <groupId>org.opendaylight.nic</groupId>
+      <artifactId>features-nic</artifactId>
+      <version>${feature.nic.version}</version>
+      <classifier>features</classifier>
+      <type>xml</type>
+    </dependency>
+    <dependency>
       <groupId>org.opendaylight.openflowplugin</groupId>
       <artifactId>features-openflowplugin</artifactId>
       <version>${feature.openflowplugin.version}</version>
