--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
     <feature.lacp.version>1.0.0-SNAPSHOT</feature.lacp.version>
     <feature.lispflowmapping.version>1.2.0-SNAPSHOT</feature.lispflowmapping.version>
     <feature.mdsal.version>1.2.0-SNAPSHOT</feature.mdsal.version>
+    <feature.nic.version>1.0.0-SNAPSHOT</feature.nic.version>
     <feature.nsf.version>0.5.0-SNAPSHOT</feature.nsf.version>
     <feature.neutron.version>0.5.0-SNAPSHOT</feature.neutron.version>
     <feature.openflowplugin.version>0.1.0-SNAPSHOT</feature.openflowplugin.version>
