added lithium features of ofPlugin
Change-Id: Idc2730512172d8bcdc90e81c12c087b8a9613b81
Signed-off-by: Michal Rehak <mirehak@cisco.com>

--- a/features/index/pom.xml
+++ b/features/index/pom.xml
@@ -170,6 +170,13 @@
       <classifier>features</classifier>
       <type>xml</type>
     </dependency>
+     <dependency>
+       <groupId>org.opendaylight.openflowplugin</groupId>
+       <artifactId>features-openflowplugin-li</artifactId>
+       <version>${feature.openflowplugin.version}</version>
+       <classifier>features</classifier>
+       <type>xml</type>
+     </dependency>
     <dependency>
       <groupId>org.opendaylight.openflowplugin</groupId>
       <artifactId>features-openflowplugin-extension</artifactId>
