Remove opendaylight-karaf-empty from integration repo
Change-Id: I2eb7cb390323d5ddcd7216428f4786a0b43a63ae
Signed-off-by: Luis Gomez <ecelgp@gmail.com>

--- a/distributions/karaf/pom.xml
+++ b/distributions/karaf/pom.xml
@@ -69,6 +69,12 @@
       <classifier>features</classifier>
       <type>xml</type>
       <scope>runtime</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.opendaylight.controller</groupId>
+          <artifactId>opendaylight-karaf-empty</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <!-- integration test feature -->
@@ -79,6 +85,12 @@
       <classifier>features</classifier>
       <type>xml</type>
       <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.opendaylight.controller</groupId>
+          <artifactId>opendaylight-karaf-empty</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <!-- External application -->
