Add odl-dsbenchmark-impl feature to Integration distribution
The coretutorials has not declared any feature to be user-facing,
but Dsbenchmark can be useful for users (to compare installations)
and it is very useful for CI: tracking DS performance.

As CI only uses builds from ${project}-distribution-${stream} jobs,
this change is needed for CI tests to happen.

Change-Id: If08d6893f0434d1eae2e47aed389f186588e9d30
Signed-off-by: Vratko Polak <vrpolak@cisco.com>

--- a/features/index/pom.xml
+++ b/features/index/pom.xml
@@ -108,6 +108,13 @@
       <type>xml</type>
     </dependency>
     <dependency>
+      <groupId>org.opendaylight.coretutorials</groupId>
+      <artifactId>dsbenchmark-features</artifactId>
+      <version>${feature.coretutorials.version}</version>
+      <classifier>features</classifier>
+      <type>xml</type>
+    </dependency>
+    <dependency>
       <groupId>org.opendaylight.didm</groupId>
       <artifactId>didm-features</artifactId>
       <version>${didm.version}</version>
