features for alto
Change-Id: I06081517e7546844e62851c3d1ee3fdd5b5fcd63
Signed-off-by: Emiapwil (Gao Kai) <gaok12@mails.tsinghua.edu.cn>

--- a/features/index/pom.xml
+++ b/features/index/pom.xml
@@ -45,6 +45,13 @@
       <type>xml</type>
     </dependency>
     <dependency>
+      <groupId>org.opendaylight.alto</groupId>
+      <artifactId>features-alto</artifactId>
+      <version>0.1.0-SNAPSHOT</version>
+      <classifier>features</classifier>
+      <type>xml</type>
+    </dependency>
+    <dependency>
        <groupId>org.opendaylight.bgpcep</groupId>
        <artifactId>features-bgp</artifactId>
        <classifier>features</classifier>
