--- a/features/index/pom.xml
+++ b/features/index/pom.xml
@@ -362,6 +362,12 @@
       <artifactId>features-test</artifactId>
       <version>1.5.0-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit-dep</artifactId>
+      <version>${junit.version}</version>
+      <scope>test</scope>
+    </dependency>
     <!-- dependency for opendaylight-karaf-empty for use by testing -->
     <dependency>
       <groupId>org.opendaylight.controller</groupId>
