--- a/features/index/pom.xml
+++ b/features/index/pom.xml
@@ -227,6 +227,13 @@
        <type>xml</type>
     </dependency>
     <dependency>
+       <groupId>org.opendaylight.packetcable</groupId>
+       <artifactId>features-packetcable-policy</artifactId>
+       <version>${feature.packetcable.version}</version>
+       <classifier>features</classifier>
+       <type>xml</type>
+    </dependency>
+    <dependency>
       <groupId>org.opendaylight.sdninterfaceapp</groupId>
       <artifactId>features-sdninterfaceapp</artifactId>
       <version>1.5.0-SNAPSHOT</version>
