--- a/features/index/pom.xml
+++ b/features/index/pom.xml
@@ -224,18 +224,25 @@
       <type>xml</type>
     </dependency>
     <dependency>
-       <groupId>org.opendaylight.packetcable</groupId>
-       <artifactId>features-packetcable</artifactId>
-       <version>${feature.packetcable.version}</version>
-       <classifier>features</classifier>
-       <type>xml</type>
+      <groupId>org.opendaylight.packetcable</groupId>
+      <artifactId>features-packetcable</artifactId>
+      <version>${feature.packetcable.version}</version>
+      <classifier>features</classifier>
+      <type>xml</type>
     </dependency>
     <dependency>
-       <groupId>org.opendaylight.packetcable</groupId>
-       <artifactId>features-packetcable-policy</artifactId>
-       <version>${feature.packetcable.version}</version>
-       <classifier>features</classifier>
-       <type>xml</type>
+      <groupId>org.opendaylight.packetcable</groupId>
+      <artifactId>features-packetcable-policy</artifactId>
+      <version>${feature.packetcable.version}</version>
+      <classifier>features</classifier>
+      <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.reservation</groupId>
+      <artifactId>features-reservation</artifactId>
+      <version>${feature.reservation.version}</version>
+      <classifier>features</classifier>
+      <type>xml</type>
     </dependency>
     <dependency>
       <groupId>org.opendaylight.sdninterfaceapp</groupId>
