--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
     <feature.ovsdb.openstack.version>1.2.0-SNAPSHOT</feature.ovsdb.openstack.version>
     <feature.ovsdb.version>1.2.0-SNAPSHOT</feature.ovsdb.version>
     <feature.packetcable.version>1.3.0-SNAPSHOT</feature.packetcable.version>
+    <feature.reservation.version>1.1.0-SNAPSHOT</feature.reservation.version>
     <feature.sfc.version>0.2.0-SNAPSHOT</feature.sfc.version>
     <feature.snbi.version>1.2.0-SNAPSHOT</feature.snbi.version>
     <feature.tcpmd5.version>1.2.0-SNAPSHOT</feature.tcpmd5.version>
