Add Reservation to Integration
Patch Set 1: Index
Patch Set 2: Test

Change-Id: Id477199fa01242e43a57ad7b640ce5e462b0e4bc
Signed-off-by: Alexis de Talhouët <adetalhouet@inocybe.com>

--- a/features/index/pom.xml
+++ b/features/index/pom.xml
@@ -227,11 +227,18 @@
        <type>xml</type>
     </dependency>
     <dependency>
-       <groupId>org.opendaylight.packetcable</groupId>
-       <artifactId>features-packetcable-policy</artifactId>
-       <version>${feature.packetcable.version}</version>
-       <classifier>features</classifier>
-       <type>xml</type>
+      <groupId>org.opendaylight.packetcable</groupId>
+      <artifactId>features-packetcable-policy</artifactId>
+      <version>${feature.packetcable.version}</version>
+      <classifier>features</classifier>
+      <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.reservation</groupId>
+      <artifactId>features-reservation</artifactId>
+      <version>${feature.reservation.version}</version>
+      <classifier>features</classifier>
+      <type>xml</type>
     </dependency>
     <dependency>
       <groupId>org.opendaylight.sdninterfaceapp</groupId>
