Add snmp4sdn back to integration
Change-Id: Idd33c65177958ef0148539096f59e1464841bece
Signed-off-by: George Zhao <george.y.zhao@huawei.com>

--- a/features/index/pom.xml
+++ b/features/index/pom.xml
@@ -304,6 +304,13 @@
       <type>xml</type>
     </dependency>
     <dependency>
+      <groupId>org.opendaylight.snmp4sdn</groupId>
+      <artifactId>features-snmp4sdn</artifactId>
+      <version>${feature.snmp4sdn.version}</version>
+      <classifier>features</classifier>
+      <type>xml</type>
+    </dependency>
+    <dependency>
       <groupId>org.opendaylight.tcpmd5</groupId>
       <artifactId>features-tcpmd5</artifactId>
       <version>${feature.tcpmd5.version}</version>
