Adding sxp features
1) Feature Tests Pass: https://jenkins.opendaylight.org/releng/view/sxp/job/sxp-merge-stable-lithium/org.opendaylight.sxp$features/6/testReport/
2) Features Comply with Guidelines: https://git.opendaylight.org/gerrit/gitweb?p=sxp.git;a=blob;f=features/src/main/resources/features.xml;
	a) Feature Names (prefixed with 'odl-'): odl-sxp-controller
	b) Features Descriptions: Present
	c) Features Start-Levels: No start-levels on <bundle> elements or <feature> elements
3) Features Tested: Features have been tested for functionality with
	a) feature:install odl-sxp-controller
	b) feature:install odl-sxp-controller, odl-integration-compatible-with-all
4) Integration Test Impact: none

Signed-off-by: Martin Sunal <msunal@cisco.com>

--- a/features/index/pom.xml
+++ b/features/index/pom.xml
@@ -311,6 +311,13 @@
       <type>xml</type>
     </dependency>
     <dependency>
+      <groupId>org.opendaylight.sxp</groupId>
+      <artifactId>features</artifactId>
+      <version>${feature.sxp.version}</version>
+      <classifier>features</classifier>
+      <type>xml</type>
+    </dependency>
+    <dependency>
       <groupId>org.opendaylight.tcpmd5</groupId>
       <artifactId>features-tcpmd5</artifactId>
       <version>${feature.tcpmd5.version}</version>
