--- a/distributions/karaf/pom.xml
+++ b/distributions/karaf/pom.xml
@@ -342,6 +342,23 @@
             </configuration>
           </execution>
           <execution>
+            <id>copy-dependencies</id>
+            <phase>prepare-package</phase>
+            <goals>
+              <goal>copy-dependencies</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>${project.build.directory}/assembly/system</outputDirectory>
+              <excludeArtifactIds>distribution.vtn-coordinator</excludeArtifactIds>
+              <overWriteReleases>false</overWriteReleases>
+              <overWriteSnapshots>true</overWriteSnapshots>
+              <overWriteIfNewer>true</overWriteIfNewer>
+              <useRepositoryLayout>true</useRepositoryLayout>
+              <addParentPoms>true</addParentPoms>
+              <copyPom>true</copyPom>
+            </configuration>
+          </execution>
+          <execution>
             <id>copy-externalapps</id>
             <phase>prepare-package</phase>
             <goals>
@@ -383,22 +400,6 @@
                   </tasks>
                 </configuration>
             </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.opendaylight.odlparent</groupId>
-        <artifactId>karaf-plugin</artifactId>
-        <version>1.5.0-SNAPSHOT</version>
-        <executions>
-          <execution>
-            <id>populate-local-repo</id>
-            <goals>
-              <goal>populate-local-repo</goal>
-            </goals>
-            <configuration>
-              <localRepo>${project.build.directory}/assembly/system</localRepo>
-            </configuration>
-          </execution>
         </executions>
       </plugin>
     </plugins>
