--- a/features/index/pom.xml
+++ b/features/index/pom.xml
@@ -234,6 +234,13 @@
       <type>xml</type>
     </dependency>
     <dependency>
+      <groupId>org.opendaylight.persistence</groupId>
+      <artifactId>features-persistence</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+      <classifier>features</classifier>
+      <type>xml</type>
+    </dependency>
+    <dependency>
       <groupId>org.opendaylight.reservation</groupId>
       <artifactId>features-reservation</artifactId>
       <version>${feature.reservation.version}</version>
